# evez-infrastructure

./: .gitignore  README.md  evez-tamagotchi-builder.html
cognition/: latest_cognition.json  observation_history.json  recursive_cognizer.py  signal_expressor.py
eventspine/: package-lock.json  package.json
eventspine/src/: examples.ts  index.ts
evez-voice/: README.md  evez-voice-server.py  evez-voice-server.service  evez-voice-synth.py  generate-system-voices-cloned.py  generate-system-voices.py  interview-engine.py  system-voice.py  voice-capture.sh  voice-cloner.py
kociemba-frontier/: deploy.py  index.html  package-lock.json  package.json
memory/: 2026-06-20.md
scripts/: cloudshell-connect.sh  cloudshell-onepaste.sh  cloudshell-setup.sh  gcp-bootstrap.sh  gcp-openclaw-deploy.sh  quick-add-keys.sh
signals/: expression_log.txt  latest_expression.json  signal.txt
strategy/: accumulate.py
topology-engine/: example_microservices.py  pyproject.toml  test_topology_engine.py  topology_engine.py
